--- a/style.css
+++ b/style.css
@@ -36,4 +36,22 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 20%;
+  color: yellow;
+}
+
+#g-text{
+  color: green;
+}
+
+.buttons{
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+.buttons button{
+  font-size: large;
+  border-radius: 50%;
+  padding: 10px;
+  font-weight: bold;
 }
