--- a/style.css
+++ b/style.css
@@ -23,20 +23,20 @@
 }
 
 .div-img{
+  width: 100%;
+}
+
+.div-title{
+  width: 100%;
+  color: yellow;
+}
+
+.element{
+  width: 20%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  width: 20%;
-}
-
-.div-title{
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 20%;
-  color: yellow;
 }
 
 #g-text{
