--- a/style.css
+++ b/style.css
@@ -4,22 +4,29 @@
   box-sizing: border-box;
 }
 
-#primo{
+#primo, #secondo, #terzo{
   height: 100vh;
-  background-color: red;
   position: relative;
+}
+
+#primo{
+  background-color: red;
 }
 
 #secondo{
-  height: 100vh;
   background-color: green;
-  position: relative;
 }
 
 #terzo{
-  height: 100vh;
   background-color: yellow;
-  position: relative;
+}
+
+.element{
+  width: 20%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 
 .div-img{
@@ -29,14 +36,6 @@
 .div-title{
   width: 100%;
   color: yellow;
-}
-
-.element{
-  width: 20%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
 }
 
 #g-text{
