--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Rubik Mono One', sans-serif;
 }
 
 #primo, #secondo, #terzo{
@@ -22,7 +23,7 @@
 }
 
 .element{
-  width: 20%;
+  width: 25%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -36,6 +37,8 @@
 .div-title{
   width: 100%;
   color: yellow;
+  font-size: 50px;
+  text-align: center;
 }
 
 #g-text{
